[package]
name = "robot-examples"
version = "0.1.0"
edition = "2021"

# Default binary (src/main.rs) - this is automatic
# Additional binary targets can be specified here:
[[bin]]
name = "base-advanced-control-websocket"
path = "example/base-advanced-control-websocket.rs"

[dependencies]
futures-channel = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
prost = "0.12"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
anyhow = "1.0.91"
regex = "1.11.1"
nix = "0.26.4"
mac_address = "1.1.7"
build-time = "0.1.3"
once_cell = "1.20.2"
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.65"
log = { version = "0.4.22", features = ["std"] }
tokio-util = "0.7.12"
hyper-tungstenite = "0.17.0"
hyper = { version = "1.5.2", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }

# Let hyper-tungstenite decide tungstenite version
tokio-tungstenite = "*"
tungstenite = "*"
http-body-util = "0.1.2"

url = "2.5.0"
lazy_static = "1.4.0"
random = "0.14.0"
mdns-sd = "0.14.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"


[build-dependencies]
prost-build = { version = "0.12.4" }
chrono = "0.4.40"
